[package]
name = "libbpf-async"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fujita/libbpf-async"
homepage = "https://github.com/fujita/libbpf-async"
readme = "../README.md"
keywords = ["bpf", "libbpf", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = { git = "https://github.com/libbpf/libbpf-rs", rev = "ebc55ba" }
libbpf-sys = "0.5.0-2"
nix = "0.23"
tokio = { version = "1.10", features = ["full"] }
page_size = "0.4"
futures = "0.3"
