[package]
name = "libbpf-async"
version = "0.1.0"
edition = "2021"
description = "library for writing BPF programs in Async Rust, complementary for libbpf-rs"
license = "Apache-2.0"
repository = "https://github.com/fujita/libbpf-async"
homepage = "https://github.com/fujita/libbpf-async"
readme = "../README.md"
keywords = ["bpf", "libbpf", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = "0.14"
libbpf-sys = "0.5.0-2"
nix = "0.22"
tokio = { version = "1.10", features = ["full"] }
page_size = "0.4"
futures = "0.3"
