[package]
name = "libbpf-async"
version = "0.1.0"
edition = "2021"
description = "library for writing BPF programs in Async Rust, complementary for libbpf-rs"
license = "LGPL-2.1 OR BSD-2-Clause"
repository = "https://github.com/fujita/libbpf-async"
homepage = "https://github.com/fujita/libbpf-async"
readme = "../README.md"
keywords = ["bpf", "libbpf", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = "0.20.1"
nix = "0.26.2"
tokio = { version = "1.24", features = ["full"] }
page_size = "0.5.0"
futures = "0.3"
