[package]
name = "bashreadline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = { version = "0.31.0", features = ["elf"] }
libbpf-rs = "0.20.1"
plain = "0.2"
chrono = "0.4"
tokio = { version = "1.28", features = ["full"] }
libbpf-async = { path = "../../libbpf-async" }
rlimit = "0.9.1"

[build-dependencies]
libbpf-cargo = "0.20.1"
