[package]
name = "bashreadline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = { version = "0.31.0", features = ["elf"] }
libbpf-rs = "0.22"
plain = "0.2"
chrono = "0.4"
tokio = { version = "1.28", features = ["full"] }
rlimit = "0.9.1"
libbpf-async = { path = "../../libbpf-async" }

[build-dependencies]
libbpf-cargo = "0.22"
