[package]
name = "profiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr2line = "0.17"
chrono = "0.4"
clap = { version = "3.1.8", features = ["derive"] }
libbpf-async = {path="../../libbpf-async"}
libbpf-rs = "0.19"
nix = "0.23"
num_cpus = "1.0"
perf-event-open-sys = "1"
plain = "0.2"
rlimit = "0.6"
tokio = { version = "1.24", features = ["full"] }

[build-dependencies]
libbpf-cargo = "0.13"
