[package]
name = "profiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr2line = "0.17.0"
chrono = "0.4"
clap = { version = "4.2.7", features = ["derive"] }
libbpf-rs = "0.22"
nix = "0.26.2"
num_cpus = "1.0"
perf-event-open-sys = "4.0.0"
plain = "0.2"
rlimit = "0.9.1"
tokio = { version = "1.28", features = ["full"] }
libbpf-async = { path = "../../libbpf-async" }

[build-dependencies]
libbpf-cargo = "0.22"
